data/derived/fa15/progs/unify/prog2066.ml.out
Characters 16-21:
  let _ = explode [123];;
                  ^^^^^
Error: This expression has type 'a list
       but an expression was expected of type string
